--- a/test/fixtures.yml
+++ b/test/fixtures.yml
@@ -132,6 +132,9 @@ garanti:
   merchant_id: 600218
   password: "123qweASD"
 
+global_collect:
+  merchant_id: MERCHANT_ID
+
 # login: merchant number
 # password: password for the PEM secret key
 # pem: public certificate and PEM secret key
@@ -573,3 +576,4 @@ wirecard:
 world_pay_gateway:
   login: LOGIN
   password: PASSWORD
+
