--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,8 @@
 rvm:
   - 1.9.3
-  - 1.9.2
-  - 1.8.7
-  - ree
-  - rbx-18mode
-
-gemfile:
-  - Gemfile
-  - Gemfile_rails31
-  - Gemfile_rails30
-  - Gemfile_rails23
-
 script: "bundle exec rake test:units"
-
+cache: bundler
 notifications:
-  email:
-    - integrations-team@shopify.com
-    - nathaniel@talbott.ws
+  hipchat:
+    rooms:
+      secure: gdprkPxgAfbKU4AJlCJ3R820Z6y+xOWAwt7+bT7DVsOSke3uMWOTzQ9bVKMb6n74R0cctq8mAYh28o5MJVxOiXNFNhHblhGdJlNxB9ZoDwLkQ6Kx/vDBGoLpqeBIA8EaD6FYCtoWBruZeu45TxR/ldYa22BjnmyNNL4acwegq/E=
