--- a/test/fixtures.yml
+++ b/test/fixtures.yml
@@ -172,6 +172,9 @@ iridium:
     login: LOGIN
     password: PASSWORD
 
+komoju:
+  login: sk_f1dd75ce3d5cad477eac0c827c1cac8eaa51ede3
+
 linkpoint:
   login: STOREID
   pem: |
